force-app/main/default/objects/RevRecProductRuleCategory__c/RevRecProductRuleCategory__c.object-meta.xml
<CustomObject>
    <label>RevRecProductRuleCategory</label>
    <nameField>
        <label>RevRecProductRuleCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecProductRuleCategorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>