force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Act_Def_Wei__c.field-meta.xml
<CustomField>
    <fullName>Act_Def_Wei__c</fullName>
    <label>Actual Deferred (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>