force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Category_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Category_End_Date__c</fullName>
    <label>Category End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>