force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Cor_Act_Def__c.field-meta.xml
<CustomField>
    <fullName>Cor_Act_Def__c</fullName>
    <label>Corporate Actual Deferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>