force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Cor_Act_Def_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_Act_Def_Wei__c</fullName>
    <label>Corporate Actual Deferred (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>