force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Cor_Rec_Amt__c.field-meta.xml
<CustomField>
    <fullName>Cor_Rec_Amt__c</fullName>
    <label>Corporate Recognized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>