force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Deferred_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Amount__c</fullName>
    <label>Deferred Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>