force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Deferred_Amount_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Amount_Weighted__c</fullName>
    <label>Deferred Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>