force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Is_Split__c.field-meta.xml
<CustomField>
    <fullName>Is_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Split</label>
    <type>Checkbox</type>
</CustomField>