force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <label>#Line Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>