force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Old_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Rule_Id__c</fullName>
    <label>Old Rule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>