force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Old_Split__c.field-meta.xml
<CustomField>
    <fullName>Old_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Split</label>
    <type>Checkbox</type>
</CustomField>