force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Old_Ultimate_Category__c.field-meta.xml
<CustomField>
    <fullName>Old_Ultimate_Category__c</fullName>
    <label>Old Ultimate Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>