force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>