force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Projected_Qty__c.field-meta.xml
<CustomField>
    <fullName>Projected_Qty__c</fullName>
    <label>Projected Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>