force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Rec_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Rec_Amt_Wei__c</fullName>
    <label>Recognized Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>