force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Recognition_Type__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Type__c</fullName>
    <label>Recognition Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>