force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Recognized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Amount__c</fullName>
    <label>Recognized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>