force-app/main/default/objects/RevRecProductRuleCategory__c/fields/RevRecProductRule__c.field-meta.xml
<CustomField>
    <fullName>RevRecProductRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecProductRule</label>
    <referenceTo>RevRecProductRule__c</referenceTo>
    <relationshipLabel>RevRecProductRuleCategorys</relationshipLabel>
    <relationshipName>RevRecProductRuleCategorys</relationshipName>
    <type>Lookup</type>
</CustomField>