force-app/main/default/objects/RevRecProductRuleCategory__c/fields/RevRecProductRuleSplitCategory__c.field-meta.xml
<CustomField>
    <fullName>RevRecProductRuleSplitCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecProductRuleSplitCategory</label>
    <referenceTo>RevRecProductRuleCategory__c</referenceTo>
    <relationshipLabel>RevRecProductRuleCategorys</relationshipLabel>
    <relationshipName>RevRecProductRuleSplitCategorys</relationshipName>
    <type>Lookup</type>
</CustomField>