force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Sub_Category_support__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_support__c</fullName>
    <label>Sub-Category support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>