force-app/main/default/objects/RevRecProductRuleCategory__c/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent</label>
    <referenceTo>RevRecProductRuleCategory__c</referenceTo>
    <relationshipLabel>RevRecProductRuleCategorys (Ultimate Parent)</relationshipLabel>
    <relationshipName>RevRecProductRuleCategorys</relationshipName>
    <type>Lookup</type>
</CustomField>